vlib/v/checker/tests/rshift_op_wrong_right_type_err.out
vlib/v/checker/tests/rshift_op_wrong_right_type_err.vv:2:15: error: cannot shift non-integer type `float literal` into type `int literal`
    1 | fn main() {
    2 |     println(1 >> 0.5)
      |                  ~~~
    3 | }
